fix: user on mobile

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -114,6 +114,7 @@
 .user-info {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .user-name { 
@@ -149,7 +150,7 @@
   #user-text{
     display: none;
   }
-  span {
+  #icon-text {
     display: none;
   }
   .login-button {
